--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="lib" path="C:/Users/Gabriel Pinto/Desktop/Trabalho/Eclipse/eclipse/jfreechart-1.0.19/jfreechart-1.0.19/lib/jcommon-1.0.23.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Gabriel Pinto/Desktop/Trabalho/Eclipse/eclipse/jfreechart-1.0.19/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriel Pinto/Desktop/Trabalho/Eclipse/eclipse/driver conexao/mysql-connector-j-9.4.0/mysql-connector-j-9.4.0/mysql-connector-j-9.4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
